Express サーバー単体で動作するようにした。
server.js 起動前にビルドして dist フォルダー内を static として配布する。

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "ng": "ng",
-        "start": "ng serve --proxy-config proxy.conf.json & node server.js",
+        "prestart": "yarn build",
+        "start": "node server.js",
+        "serve": "ng serve --proxy-config proxy.conf.json",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
