--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "prestart": "yarn build",
         "start": "node server.js",
-        "serve": "ng serve --proxy-config proxy.conf.json",
+        "serve": "ng serve --proxy-config proxy.conf.json --host 0.0.0.0 --disable-host-check",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
