--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
+        "angular2-markdown": "^1.6.0",
         "core-js": "^2.4.1",
         "express": "^4.15.3",
         "ng2-handsontable": "^1.0.3",
