POST リクエスト時の処理をモジュールとして自動で読み込む仕組みにした。
api フォルダーにファイルを追加するだけで server.js は編集せずに使えるようになる。

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "serve": "ng serve --proxy-config proxy.conf.json --host 0.0.0.0 --disable-host-check",
-        "start": "node ./server/server.js",
+        "start": "node ./server.js",
         "prestart:dist": "yarn build",
         "start:dist": "yarn start",
         "build": "ng build",
